--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,12 @@ img {
 	display: block;
 }
 
+.section {
+  max-width: 1400px;
+  width: 100%;
+  margin: 0 auto;
+}
+
 .container {
     width: 100%;
     max-width: 1110px;
@@ -107,6 +113,7 @@ img {
 }
 
 /* Header */
+
 .header .container {
   display: flex;
   justify-content: space-between;
