--- a/css/styles.css
+++ b/css/styles.css
@@ -139,9 +139,9 @@ img {
 }
 
 .header-menu {
-  display: flex;
-  align-items: center;
-  gap: 40px;
+    display: flex;
+    align-items: center;
+    gap: 40px;
 }
 
 .link {
@@ -149,7 +149,11 @@ img {
     color: var(--color-primeri-dark);
     text-decoration: none;
     line-height: 1.75;
-    /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); Плавна анімація */
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link:hover {
+  color: var(--color-brand);
 }
 
 .link.current {
@@ -178,7 +182,10 @@ img {
   border: 1px solid var(--color-brand-light);
   border-radius: 4px;
   background-color: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 .btn-menu .button-up {
   width: 113px;
@@ -186,5 +193,18 @@ img {
   background-color: var(--color-brand);
   color: var(--color-primeri-white);
   border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+}
+
+.button-in:hover {
+  color: var(--color-primeri-white);
+  background-color: var(--color-brand);
+  border: none;
+}
+
+.button-up:hover {
+  color: var(--color-primeri-dark);
+  background-color: transparent;
+  border: 1px solid var(--color-brand-light);
 }
