--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ img {
 }
 
 .section {
-  max-width: 1400px;
+  /* max-width: 1400px; */
   width: 100%;
   margin: 0 auto;
 }
@@ -113,6 +113,10 @@ img {
 }
 
 /* Header */
+
+.header.section {
+  margin-bottom: 15px;
+}
 
 .header .container {
   display: flex;
@@ -175,6 +179,7 @@ img {
   font-size: 16px;
   text-align: center;
   padding: 9px 24px;
+  cursor: pointer;
 }
 
 .btn-menu .button-in {
@@ -204,6 +209,175 @@ img {
 }
 
 .button-up:hover {
+  color: var(--color-primeri-dark);
+  background-color: transparent;
+  border: 1px solid var(--color-brand-light);
+}
+
+/* Hero section */
+.hero-section {
+  margin-bottom: 110px;
+}
+
+.hero-section .container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 35px;
+}
+
+.hero-container {
+  width: 100%;
+  max-width: 465px;
+  padding: 112px 0;
+}
+
+.hero-title {
+  width: 420px;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.5;
+  margin-bottom: 18px;
+}
+
+.hero-text {
+  font-size: 18px;
+  line-height: 1.56;
+  margin-bottom: 45px;
+}
+
+.hero-list {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+
+}
+
+.hero-btn {
+  width: 178px;
+  height: 53px;
+  padding: 15px 0;
+  font-weight: 700;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 4px;
+  border: none;
+  color: var(--color-primeri-white);
+  background-color: var(--color-brand);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hero-btn:hover {
+  color: var(--color-primeri-dark);
+  background-color: transparent;
+  border: 1px solid var(--color-brand-light);
+}
+
+
+.hero-video-btn {
+  font-weight: 600;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  padding: 2px 0;
+  border: none;
+  cursor: pointer;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: var(--color-brand);
+  background-color: transparent;
+
+}
+
+.icon-play {
+  fill: var(--color-brand);
+  margin-right: 9px;
+}
+
+/* Product section */
+
+.product-section .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.product-title {
+  width: 530px;
+  font-weight: 700;
+  font-size: 32px;
+  text-align: center;
+  margin: 0 auto 50px;
+}
+
+.product-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  margin-bottom: 50px;
+}
+
+.product-card {
+  width: calc((100% - 90px) / 4);
+}
+
+.arrow,
+.snake,
+.heart,
+.time {
+  border-radius: 19px;
+  width: 54px;
+  height: 54px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 26px;
+}
+
+.arrow-container {
+  background-color: var(--color-brand);
+}
+.snake-container {
+  background-color: var(--color-icon-blue);
+}
+.heart-container {
+  background-color: var(--color-icon-violet);
+}
+.time-container {
+  background-color: var(--color-icon-red);
+}
+
+.icon-arrow,
+.icon-snake,
+.icon-heart,
+.icon-time {
+  fill: var(--color-primeri-white);
+}
+
+.card-title {
+  font-weight: 600;
+  font-size: 22px;
+  margin-bottom: 13px;
+}
+
+.product-btn {
+  width: 175px;
+  height: 53px;
+  padding: 15px 0;
+  font-weight: 700;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 4px;
+  border: none;
+  color: var(--color-primeri-white);
+  background-color: var(--color-brand);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.product-btn:hover {
   color: var(--color-primeri-dark);
   background-color: transparent;
   border: 1px solid var(--color-brand-light);
