--- a/css/styles.css
+++ b/css/styles.css
@@ -301,6 +301,8 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 .product-title {
@@ -381,4 +383,48 @@ img {
   color: var(--color-primeri-dark);
   background-color: transparent;
   border: 1px solid var(--color-brand-light);
+}
+
+/* Managment section */
+
+.managment-section .container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 84px;
+}
+
+.managment-container {
+  width: 486px;
+  padding: 41px 0;
+}
+
+.managment-title {
+  width: 224px;
+  margin-bottom: 25px;
+  font-weight: 600;
+  font-size: 16px;
+}
+
+.managment-title-decor {
+  font-weight: 700;
+  font-size: 32px;
+}
+.managment-text {
+  margin-bottom: 30px;
+}
+
+.managment-card-title {
+font-weight: 600;
+font-size: 16px;
+line-height: 1.62;
+margin-bottom: 12px;
+}
+
+.managment-card-text {
+  margin-bottom: 25px;
+}
+
+.managment-card-text.text-card {
+  margin-bottom: 0;
 }
