--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,7 @@
     --color-secondary-normal: #30444E;
     --color-secondary-light: #475E69;
     --color-logo: #173A56;
+    --color-icon-yellow:  #f90;
 }
 
 /* base */
@@ -104,6 +105,7 @@ img {
   /* max-width: 1400px; */
   width: 100%;
   margin: 0 auto;
+  padding: 50px 0;
 }
 
 .container {
@@ -114,8 +116,8 @@ img {
 
 /* Header */
 
-.header.section {
-  margin-bottom: 15px;
+.header {
+  padding: 0;
 }
 
 .header .container {
@@ -216,7 +218,7 @@ img {
 
 /* Hero section */
 .hero-section {
-  margin-bottom: 110px;
+ padding-top: 15px;;
 }
 
 .hero-section .container {
@@ -297,12 +299,13 @@ img {
 
 /* Product section */
 
+/* .product-section {
+  padding-bottom: 50px;
+} */
 .product-section .container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 50px;
-  margin-bottom: 50px;
 }
 
 .product-title {
@@ -362,6 +365,10 @@ img {
   font-weight: 600;
   font-size: 22px;
   margin-bottom: 13px;
+}
+
+.product-card-text {
+  margin-bottom: 0;
 }
 
 .product-btn {
@@ -427,4 +434,78 @@ margin-bottom: 12px;
 
 .managment-card-text.text-card {
   margin-bottom: 0;
+}
+
+/* Support section */
+
+.support-section .container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 84px;
+}
+
+.support-container {
+  padding: 41px 0;
+}
+
+.support-title {
+  font-weight: 600;
+  font-size: 16px;
+  width: 310px;
+  margin-bottom: 25px;
+}
+
+.support-title-decor {
+  font-weight: 700;
+  font-size: 32px;
+}
+
+.support-text {
+  margin-bottom: 30px;
+}
+
+.support-list {
+  width: 450px;
+}
+
+.support-card {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+
+.support-card:not(:last-child) {
+  margin-bottom: 25px;
+}
+
+.support-path {
+  width: 35px;
+  height: 35px;
+  border: 2.92px solid var(--color-primeri-white);
+  border-radius: 14px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  padding: 8px 0;
+}
+
+
+
+.support-path.one {
+  background-color: var(--color-icon-yellow);
+}
+.support-path.two {
+  background-color: var(--color-icon-red);
+}
+.support-path.three {
+  background-color: var(--color-icon-blue);
+}
+
+.icon-path {
+  fill: var(--color-primeri-white);
+}
+.support-card-text {
+  margin: 0;
 }
