--- a/css/styles.css
+++ b/css/styles.css
@@ -64,9 +64,17 @@
     --color-secondary-light: #475E69;
     --color-logo: #173A56;
     --color-icon-yellow:  #f90;
+    --color-per-normal: #afafaf;
+    --color-per-light: #e0e0e0;
 }
 
 /* base */
+*,
+*::after,
+*::before {
+  box-sizing: border-box; /* контент та падінги додаються всередині бордера*/
+}
+
 body {
   color: var(--color-primeri-dark);
   background-color: var(--color-primeri-white);
@@ -176,11 +184,11 @@ button {
 
 .button-in,
 .button-up {
-  height: 42px;
+  /* height: 42px; */
   font-weight: 600;
   font-size: 16px;
   text-align: center;
-  padding: 9px 0;
+  padding: 11px 0;
 }
 
 .btn-menu .button-in {
@@ -203,13 +211,15 @@ button {
 
 }
 
-.button-in:hover {
+.button-in:hover,
+.button-in:focus {
   color: var(--color-primeri-white);
   background-color: var(--color-brand);
   border: none;
 }
 
-.button-up:hover {
+.button-up:hover,
+.button-up:focus {
   color: var(--color-primeri-dark);
   background-color: transparent;
   border: 1px solid var(--color-brand-light);
@@ -249,7 +259,7 @@ button {
 
 .hero-btn {
   width: 178px;
-  height: 53px;
+  /* height: 53px; */
   padding: 15px 0;
   font-weight: 700;
   font-size: 16px;
@@ -261,7 +271,8 @@ button {
   color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero-btn:hover {
+.hero-btn:hover,
+.hero-btn:focus {
   color: var(--color-primeri-dark);
   background-color: transparent;
   border: 1px solid var(--color-brand-light);
@@ -479,7 +490,7 @@ margin-bottom: 12px;
 /* Process section */
 
 .process-section {
-  padding: 75px 0;
+  padding: 75px 0 50px 0;
 }
 
 .process-section .container {
@@ -546,6 +557,10 @@ margin-bottom: 12px;
 
 /* Strategies section */
 
+.strategies-section {
+  padding-bottom: 85px;
+}
+
 .strategies-title {
   font-weight: 700;
   font-size: 34px;
@@ -590,3 +605,135 @@ margin-bottom: 12px;
   padding: 0 27px;
   /* margin-bottom: 40px; */
 }
+
+/* Price section */
+
+.price-section {
+  padding: 85px 0 50px 0;
+}
+
+.price-section .container {
+  display: flex;
+  flex-direction: column;
+ 
+}
+.price-title {
+  line-height: 1.67;
+  margin: 0 auto 10px;
+}
+.price-text {
+   font-weight: 500;
+   margin: 0 auto 40px;
+}
+
+.price-list {
+ display: flex;
+ justify-content: space-between;
+ gap: 72px;
+}
+.price-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 32px 0;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.25);
+  width: calc((100% - 144px) / 3);
+}
+
+.price-card.background {
+  background-color: var(--color-brand);
+}
+
+.price-card-title {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.67;
+  margin-bottom: 8px;
+}
+.price-card-text {
+  line-height: 2.5;
+  margin-bottom: 16px;
+}
+.numeric-text {
+  font-weight: 700;
+  font-size: 76px;
+  line-height: 1.32;
+  color: var(--color-brand);
+}
+.wrap-price {
+  display: flex;
+  align-items: center;
+  margin-bottom: 16px;
+}
+
+.symbol {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.25;
+  color: var(--color-brand);
+}
+.per-text {
+  line-height: 1.19;
+  letter-spacing: 0.01em;
+  color: var(--color-per-normal);
+}
+.offers-list {
+  text-align: center;
+  margin-bottom: 30px;
+}
+.offers:not(:last-child) {
+  margin-bottom: 16px;
+}
+.offers-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.37;
+  letter-spacing: 0.01em
+}
+.price-btn {
+  font-weight: 600;
+  font-size: 18px;
+  border-radius: 8px;
+  width: 139px;
+  padding: 12px 0;
+}
+ .price-btn:hover {
+   border: none;
+   box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.25);
+ }
+
+.price-card-title.accent,
+.price-card-text.accent,
+.numeric-text.accent,
+.offers-text.accent {
+  color: var(--color-primeri-white);
+}
+
+.per-text.accent {
+  color: var(--color-per-light);
+}
+
+.price-btn.accent {
+  font-weight: 600;
+  font-size: 18px;
+  text-align: center;
+  color: var(--color-brand);
+  padding: 12px 0;
+  width: 139px;
+  border: none;
+  border-radius: 8px;
+  background-color: var(--color-primeri-white);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.price-btn.accent:hover,
+.price-btn.accent:focus {
+   color: var(--color-primeri-dark);
+   border: none;
+   background-color: var(--color-brand);
+   box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.25);
+}
+
+
