--- a/css/styles.css
+++ b/css/styles.css
@@ -608,6 +608,10 @@ margin-bottom: 12px;
   /* margin-bottom: 40px; */
 }
 
+.strategies-card-title.accent {
+  color: var(--color-brand);
+}
+
 /* Price section */
 
 .price-section {
