--- a/css/styles.css
+++ b/css/styles.css
@@ -1132,17 +1132,29 @@ margin-bottom: 16px;
 }
 
 /* Offers */
+
+.offer-section {
+  padding-top: 58px;
+  padding-bottom: 75px;
+}
+
+.offer-section .section-title {
+  max-width: 537px;
+  margin: 0 auto 50px;
+}
+
 .wrap-circle-lightning {
   width: 150px;
   height: 150px;
   background-color: #ffefef;
   border-radius: 100px;
+  margin-bottom: 26px;
   /* position: relative; */
 }
 .wrap-background-lightning {
   position: relative;
-  top:26px;
-  left: 46px;
+  top:28px;
+  left: 48px;
   width: 50px;
   height: 50px;
   border-radius: 8px;
@@ -1185,11 +1197,21 @@ margin-bottom: 16px;
   align-items: center;
 }
 
+.offer-item-title {
+  color: #000;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  margin-bottom: 16px;
+ 
+}
+
 .offer-item-text {
   width: 215px;
   font-size: 18px;
   line-height: 1.78;
   text-align: center;
+  margin-bottom: 12px;
 }
 
 .wrap-circle-union {
@@ -1197,12 +1219,13 @@ margin-bottom: 16px;
   height: 150px;
   background-color: #f2f6ff;;
   border-radius: 100px;
+  margin-bottom: 26px;
 }
 
 .wrap-background-union {
-   position: relative;
-  top:26px;
-  left: 46px;
+  position: relative;
+  top:28px;
+  left: 48px;
   width: 50px;
   height: 50px;
   border-radius: 8px;
@@ -1212,7 +1235,7 @@ margin-bottom: 16px;
 }
 
 .wrap-bg-icon-union {
- position: absolute;
+  position: absolute;
   top: 11px;
   left: 6px;
   width: 50px;
@@ -1230,5 +1253,20 @@ margin-bottom: 16px;
   /* fill: var(--color-primeri-white); */
 }
 
+.offer-link.link {
+  color: #000;
+  font-weight: 500; 
+  line-height: 1.75;
+  padding: 0;
+}
+
+/* Promo */
+.promo-section.customers {
+  padding: 75px 0;
+}
+
+.footer-section.customers {
+  padding-top: 75px;
+}
 
  
