--- a/css/styles.css
+++ b/css/styles.css
@@ -317,6 +317,11 @@ button {
 .icon-play {
   fill: var(--color-brand);
   margin-right: 9px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hero-video-btn:hover > .icon-play {
+  fill: rgb(104, 24, 24);
 }
 
 /* Product section */
@@ -540,24 +545,25 @@ button {
 .process-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  row-gap: 25px;
+  justify-content: center;
+  gap: 25px 100px;
   margin-bottom: 50px;
 }
 
 .process-card {
   display: flex;
   align-items: center;
-  width: calc(50% - 60px);
+  width: calc((100% - 100px) / 2);
   gap: 20px;
  
 }
 
 .wrap-card-text {
+  width: 281px;
+  height: 50px;
   display: flex;
   align-items: center;
-  padding: 14px 20px;
-  height: 50px;
+  justify-content: center;
   flex-shrink: 0;
   border-radius: 25px;
   box-shadow: 2px 2px 10px 0 rgba(23, 58, 86, 0.15);
