--- a/css/styles.css
+++ b/css/styles.css
@@ -1434,7 +1434,7 @@ margin-bottom: 16px;
   margin-bottom: 16px;
 }
 
-.question-item.colum {
+.question-item {
   flex-direction: column;
   align-items: flex-start;  
 }
