--- a/css/styles.css
+++ b/css/styles.css
@@ -415,10 +415,9 @@ button {
 }
 
 .hero-title {
-  min-width: 372px;
   font-weight: 700;
-  font-size: 40px;
-  line-height: 1.5;
+  font-size: 36px; 
+  line-height: 1.67;
   margin-bottom: 16px;
   text-align: center;
 }
@@ -486,6 +485,8 @@ button {
 }
 
 .hero-title {
+  font-size: 40px;
+  line-height: 1.5;
   margin-bottom: 18px;
   text-align: start;
 }
@@ -706,4 +707,280 @@ button {
   margin-bottom: 25px;
 }
 }
+/* Support section */
 
+.support-img {
+  margin-bottom: 50px;
+}
+
+.support-container .title {
+  margin-bottom: 15px;
+}
+
+.support-container .text {
+  margin-bottom: 16px;
+}
+.support-card {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+
+.support-card:not(:last-child) {
+  margin-bottom: 16px; /*25px*/
+}
+
+.support-path {
+  width: 35px;
+  height: 35px;
+  border: 2.92px solid var(--color-primeri-white);
+  border-radius: 14px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  padding: 8px 0;
+}
+
+.support-path.one {
+  background-color: var(--color-icon-yellow);
+}
+.support-path.two {
+  background-color: var(--color-icon-red);
+}
+.support-path.three {
+  background-color: var(--color-icon-blue);
+}
+
+.icon-path {
+  fill: var(--color-primeri-white);
+}
+
+ @media screen and (min-width: 1150px) {
+  .support-section .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.support-container {
+  max-width: 450px;
+}
+
+.support-list {
+  width: 450px;
+}
+
+.support-img {
+  margin-bottom: 0;
+}
+
+.support-container .title {
+  margin-bottom: 25px;
+}
+
+.support-container .text {
+  margin-bottom: 30px;
+
+}
+
+.support-card:not(:last-child) {
+  margin-bottom: 25px;
+}
+ 
+}
+
+
+/* Collaborative section */
+
+.collaborative-section .container {
+  display: flex;
+  flex-direction: column-reverse;
+ 
+}
+
+.collaboration-img {
+  margin-bottom: 50px;
+}
+
+.collaborative-card:not(:last-child) {
+  margin-bottom: 16px;/*25*/
+}
+
+
+ @media screen and (min-width: 1150px) {
+ 
+  .collaborative-section .container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between; 
+}
+
+.collaborative-card:not(:last-child) {
+  margin-bottom: 25px;
+}
+
+
+.collaborative-section {
+  padding-bottom: 75px;
+}
+
+
+.collaborative-container {
+  max-width: 486px;
+}
+
+.collaboration-img {
+  margin-bottom: 0;
+}
+
+}
+
+/* Process section */
+
+
+.process-section {
+  padding: 75px 0 50px 0;
+}
+
+.process-section .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+  max-width: 916px;
+}
+
+.section-title {
+  font-weight: 700;
+  font-size: 32px;
+  text-align: center;
+  margin-bottom: 8px;
+}
+
+.section-text {
+  max-width: 350px;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 40px;
+
+}
+
+.process-card.reverse {
+  flex-direction: row-reverse; /* Міняємо порядок: текст перед картинкою */
+}
+
+.process-list {
+  display: flex;
+  flex-direction: column; /* Елементи розташовуються вертикально */
+
+}
+
+.process-card {
+  order: 0; /* Початкове значення */
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 32px;
+}
+
+
+
+.process-card:nth-child(1) {
+  order: 1; /* avatar1 */
+}
+
+.process-card:nth-child(3) {
+  order: 2; /* avatar3 */
+}
+
+.process-card:nth-child(4) {
+  order: 3; /* avatar4 */
+}
+
+.process-card:nth-child(2) {
+  order: 4; /* avatar2 */
+}
+
+
+.wrap-card-text {
+  width: 237px; /*281px;*/
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  border-radius: 25px;
+  box-shadow: 0 2px 8px 0 rgba(86, 117, 146, 0.1);
+
+}
+
+.process-text {
+   width: 188px;
+   font-weight: 500;
+   text-align: center;
+}
+
+.process-btn {
+  min-width: 216px;
+}
+
+@media screen and (min-width: 1150px) {
+  .process-list {
+  display: flex;
+  flex-direction: row;
+ 
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 25px 100px;
+  margin-bottom: 50px;
+}
+
+.process-card {
+    width: calc((100% - 100px) / 2);
+   
+}
+
+.process-list .process-card {
+    margin-bottom: 25px;
+}
+
+.process-list .process-card.last {
+    margin-bottom: 0px;
+}
+
+.process-card:nth-child(1) {
+  order: 1; /* avatar1 */
+}
+
+.process-card:nth-child(2) {
+  order: 2; /* avatar3 */
+}
+
+.process-card:nth-child(3) {
+  order: 3; /* avatar4 */
+}
+
+.process-card:nth-child() {
+  order: 4; /* avatar2 */
+}
+
+.section-title {
+   margin-bottom: 25px;
+}
+
+.section-text {
+  max-width: 542px;
+ 
+}
+.wrap-card-text {
+  width: 281px;  
+  box-shadow: 2px 2px 10px 0 rgba(23, 58, 86, 0.15);
+}
+
+.process-text {
+   min-width: 242px;
+}
+
+}
