--- a/css/styles.css
+++ b/css/styles.css
@@ -1079,7 +1079,7 @@ button {
 }
 
 .strategies-card-title {
-  min-width: 340px;
+  max-width: 340px;
   padding: 0 27px;
 }
 }
@@ -1096,24 +1096,23 @@ button {
 .price-title {
   text-align: center;
   line-height: 1.67;
-  margin: 0 auto 8px; /*margin-bottom:10px*/
+  margin: 0 auto 8px;
 }
 
 .price-text {
   text-align: center;
    font-weight: 500;
-   margin: 0 auto 50px;  /*margin-bottom:40px*/
+   margin: 0 auto 50px;
 }
 
 .price-card {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 322px;
+  min-width: 322px;
   padding: 32px 0;
   border-radius: 8px;
-  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.25);
-  /* width: calc((100% - 144px) / 3); */
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.25); 
 }
 
 .price-card.background {
@@ -1244,4 +1243,146 @@ button {
    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.25);
 }
 
+}
+
+/* Clients section  */
+
+.clients-section .section-title {
+    margin-bottom: 8px;
+}
+
+ .clients-section .section-text {
+  max-width: 323px;
+  line-height: 1.75;
+  letter-spacing: 0.01em;
+  margin: 0 auto 32px;
+ }
+
+ .clients-list {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.clients-card {
+  width: 327px;
+  border: 1px solid #dedede;
+  border-radius: 5px;
+  padding: 24px 26px;
+}
+
+
+.wrap-clients {
+  display: flex;
+  align-items: center;
+  gap: 14px;  
+}
+
+.wrap-card-image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ }
+
+ .text-card-clients {
+line-height: 1.75;
+letter-spacing: 0.01em;
+color: var(--color-primeri-light);
+margin-bottom: 16px;
+}
+
+.clients-card-title {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.01em;
+  color: var(--color-brand);
+}
+.clients-card-text {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.01em;
+  color: var(--color-primeri-normal);
+}
+
+@media screen and (min-width: 1150px) {
+  .clients-section .section-title {
+    margin-bottom: 10px;
+}
+
+ .clients-section .section-text {
+  max-width: 537px;
+  margin-bottom: 40px;
+ }
+
+ .clients-list {
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 64px;
+}
+
+.clients-card {
+  margin-top: 28px;
+  margin-bottom: 28px;
+  width: calc((100% - 128px) / 3);
+}
+
+.hyphenation {
+  display: block;
+}
+}
+
+/* Promo section */
+
+.promo-section .container {
+  padding-top: 17px;
+  max-width: 370px;
+  border-radius: 32px;
+  background-color: var(--color-brand);
+}
+
+.promo-text {
+  text-align: center;
+  max-width: 510px;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 1.51;
+  color: var(--color-primeri-white);
+  margin-bottom: 57px;
+}
+.wrap-promo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.promo-btn.price-btn.accent {
+  min-width: 150px;
+  padding: 15px 0;
+  margin-bottom: 32px;/*?*/
+}
+
+@media screen and (min-width: 1150px) {
+  .promo-section .container {
+  max-width: 968px;
+  padding: 0 46px 0 51px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.promo-text {
+  margin-bottom: 46px;
+}
+
+.wrap-promo {
+  align-items: flex-start;
+}
+
+.promo-text {
+  text-align: start;
+}
 }
