--- a/css/styles.css
+++ b/css/styles.css
@@ -1386,3 +1386,112 @@ margin-bottom: 16px;
   text-align: start;
 }
 }
+
+/* Footer */
+
+
+.footer-section .link-logo {
+    color:var(--color-logo);
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 0.93; 
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    padding: 0;
+    margin-bottom: 18px;
+}
+
+.sociale {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 16px;
+}
+
+.item-icons {
+  width: 40px;
+  height: 40px; 
+}
+
+.icon-link {
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-icon-cociale);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.sociale-icons {
+  fill: var(--color-icon-cociale);
+  stroke: var(--color-brand);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-link {
+  color: var(--color-primeri-dark);
+  text-decoration: none;
+  line-height: 2.19;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-title {
+  display: inline-block;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.5;
+  margin-bottom: 8px;
+
+}
+.footer-title.form {
+  display: inline-block;
+  margin-bottom: 30px;
+}
+
+.footer-text {
+ line-height: 1.87;
+ text-align: center;
+}
+
+
+.form-icon {
+  display: none;
+}
+
+/* Загальний стиль форми */
+.order-form {
+  max-width: 325px;
+  margin-bottom: 25px;
+  
+}
+
+.form-field {
+  max-width: 325px;
+  padding: 10px 15px; /*10px 0 10px 42px;*/
+  border: 1px solid var(--color-brand-light);
+  border-radius: 4px;
+  line-height: 1.75;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* При фокусі на інпуті */
+.form-field:focus {
+  /* border-color: var(--color-primeri-light); */
+  border: 0.5px solid var(--color-primeri-light);
+ }
+
+.form-field::placeholder {
+  color: transparent; /*color: var(--color-brand);*/ /* Колір тексту підказки */
+}
+
+
+
+
+.footer-btn {
+  min-width: 131px;
+  padding: 10px 0;
+}
