update css footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -203,7 +203,7 @@ button {
     display: flex;
     align-items: center;
     gap: 16px;
-    /* margin-right: 237px; */
+   
 }
 /*mobile menu*/
 
@@ -1390,17 +1390,23 @@ margin-bottom: 16px;
 /* Footer */
 
 
+.footer-wrap-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .footer-section .link-logo {
-    color:var(--color-logo);
-    font-family: "Poppins", sans-serif;
-    font-weight: 700;
-    font-size: 30px;
-    line-height: 0.93; 
-    display: flex;
-    align-items: center;
-    gap: 16px;
-    padding: 0;
-    margin-bottom: 18px;
+  color:var(--color-logo);
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 0.93; 
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  padding: 0;
+  margin-bottom: 25px;
 }
 
 .sociale {
@@ -1408,6 +1414,7 @@ margin-bottom: 16px;
   align-items: center;
   justify-content: flex-start;
   gap: 16px;
+  margin-bottom: 32px;
 }
 
 .item-icons {
@@ -1416,14 +1423,14 @@ margin-bottom: 16px;
 }
 
 .icon-link {
-    width: 100%;
-    height: 100%;
-    background-color: var(--color-icon-cociale);
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-icon-cociale);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .sociale-icons {
@@ -1433,6 +1440,10 @@ margin-bottom: 16px;
   stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.footer-list {
+   text-align: center;
+}
+
 .footer-link {
   color: var(--color-primeri-dark);
   text-decoration: none;
@@ -1440,16 +1451,20 @@ margin-bottom: 16px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-title {
-  display: inline-block;
+  text-align: center;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.5;
   margin-bottom: 8px;
-
 }
+
+.wrap-title-list {
+  margin-bottom: 32px;
+}
+
 .footer-title.form {
-  display: inline-block;
-  margin-bottom: 30px;
+  max-width: 280px;
+  margin-bottom: 34px;
 }
 
 .footer-text {
@@ -1457,6 +1472,12 @@ margin-bottom: 16px;
  text-align: center;
 }
 
+.wrap-title-form-button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 44px;
+}
 
 .form-icon {
   display: none;
@@ -1465,13 +1486,12 @@ margin-bottom: 16px;
 /* Загальний стиль форми */
 .order-form {
   max-width: 325px;
-  margin-bottom: 25px;
-  
+  margin-bottom: 20px;
 }
 
 .form-field {
   max-width: 325px;
-  padding: 10px 15px; /*10px 0 10px 42px;*/
+  padding: 10px 15px;
   border: 1px solid var(--color-brand-light);
   border-radius: 4px;
   line-height: 1.75;
@@ -1480,18 +1500,125 @@ margin-bottom: 16px;
 
 /* При фокусі на інпуті */
 .form-field:focus {
-  /* border-color: var(--color-primeri-light); */
   border: 0.5px solid var(--color-primeri-light);
+  outline: none;
  }
 
 .form-field::placeholder {
-  color: transparent; /*color: var(--color-brand);*/ /* Колір тексту підказки */
+  color: transparent; 
 }
-
-
-
 
 .footer-btn {
   min-width: 131px;
   padding: 10px 0;
+}
+
+@media screen and (min-width: 1150px) {
+
+.form-icon {
+  display: flex;
+}
+
+.footer-wrap-container {
+   flex-direction: row;
+   align-items: flex-start;
+   margin-bottom: 10px;
+}
+
+.footer-section .link-logo {
+  margin-bottom: 18px;
+}
+
+.sociale {
+  margin-bottom: 0;
+}
+
+.footer-list {
+   text-align: start;
+}
+
+.footer-title {
+  text-align: start;
+ }
+
+.footer-title.form {
+  max-width: 280px;
+  margin-bottom: 30px;
+}
+
+.order-form {
+  margin-bottom: 25px;
+}
+
+.form-field {
+  padding: 10px 0 10px 42px;
+}
+
+.form-field::placeholder {
+  color: var(--color-brand);
+}
+
+.icon-link:hover,
+.icon-link:focus {
+    background-color: var(--color-brand);
+}
+
+.icon-link:hover .sociale-icons,
+.icon-link:focus .sociale-icons {
+  fill: var(--color-brand);
+  stroke: var(--color-icon-cociale);
+}
+
+.wrap-logo-sociale {
+  margin-right: 148px;
+}
+
+.wrap-title-list {
+  flex-shrink: 0;
+  margin-right: 140px;
+  margin-bottom: 0;
+}
+
+.wrap-title-list.footer {
+  flex-shrink: 0;
+  margin-right: 95px;
+}
+
+.footer-link:hover {
+  color: var(--color-brand);
+}
+
+.form-icons {
+  fill: var(--color-brand);
+}
+
+.for-input-icon {
+  position: relative;
+}
+
+/* Іконка всередині інпуту */
+.form-icon {
+  position: absolute;
+  left: 12px; /* Відступ іконки від краю інпуту */
+  top: 50%; /* Розташування по центру вертикально */
+  transform: translateY(-50%); /* Центрування іконки */
+  fill: var(--color-brand); /* Колір іконки */
+  pointer-events: none; /* Щоб іконка не перекривала поле вводу */
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+ .for-input-icon:focus-within .form-icon {
+  fill: var(--color-primeri-light); /* Змінений колір іконки */
+}
+
+/* Зміна кольору плейсхолдера при фокусі */
+.form-field:focus::placeholder {
+  color: var(--color-primeri-light)
+}
+
+.wrap-title-form-button {
+  align-items: flex-start;
+  margin-bottom: 0;
+}
+
 }
