--- a/css/styles.css
+++ b/css/styles.css
@@ -1622,3 +1622,171 @@ margin-bottom: 16px;
 }
 
 }
+
+/* Page Price */
+
+/* Price */
+.section-price-title {
+  text-align: center;
+  font-size: 24px;
+  margin-bottom: 30px;  /*32*/
+}
+
+.section-price .price-title {
+  font-weight: 700;
+  font-size: 36px;
+  margin-bottom: 18px;
+}
+
+@media screen and (min-width: 1150px) {
+
+ /* .section-price .container {
+  display: flex;
+  flex-direction: column; 
+} */
+
+.section-price-title {
+  margin-bottom: 32px;
+}
+
+.section-price .price-title {
+  margin-bottom: 16px;
+}
+.section-price .price-text {
+  margin-bottom: 49px;
+}
+
+.section.section-price {
+  padding-bottom: 75px;
+}
+
+}
+
+/* Enterprise */
+.enterprise-section {
+  padding: 75px 0;
+  background: linear-gradient(180deg, #f6f6f6 0%, rgba(246, 246, 246, 0) 100%);
+}
+
+.section-enterprise-title {
+  font-weight: 600;
+  font-size: 24px;
+  text-align: center;
+  margin-bottom: 24px;
+}
+
+.section-titile {
+  font-weight: 700;
+  font-size: 34px;
+  text-align: center;
+  margin-bottom: 25px;
+}
+
+.hide-on-mobile {
+  display: none;
+}
+
+.enterprise-section-text {
+  font-size: 18px;
+  text-align: center;
+  margin-bottom: 32px;
+}
+.enterprise-btn {
+  display: block;
+  width: 224px;
+  border-radius: 8px;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 1150px) {
+    .hide-on-mobile {
+    display: inline;
+  }
+
+  .section-enterprise-title {
+  margin-bottom: 16px;
+}
+
+.section-titile {
+  margin-bottom: 8px;
+}
+
+}
+/* Effects */
+
+
+.effects-title {
+  font-weight: 700;
+  font-size: 32px;
+  text-align: center;
+  margin-bottom: 33px;
+}
+.wrap-effects-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100px;
+  width: 50px;
+  height: 50px;
+  background-color: var(--color-icon-effects-bg);
+}
+
+.wrap-icon-title {
+   display: flex;
+   align-items: center;
+   gap: 16px;
+   margin-bottom: 16px;
+}
+
+.effects-item:not(:last-child) {
+  margin-bottom: 24px;
+}
+
+.effect-img {
+  margin-bottom: 32px;
+}
+
+.effects-item-text {
+  max-width: 335px;
+  line-height: 1.75;
+} 
+  @media screen and (min-width: 1150px) {
+.effects-section {
+  padding: 75px 0;
+}
+
+.wrap-effects.image-list {
+  display: flex;
+  gap: 60px;
+}
+
+
+.effects-item-title {
+  font-weight: 600;
+  font-size: 24px;
+}
+
+.effects-title {
+  font-size: 34px;
+  margin-bottom: 56px;
+}
+
+.wrap-icon-title {
+   gap: 14px;
+}
+
+.effects-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.effect-img {
+  margin-bottom: 0;
+}
+
+.effects-item-text {
+  max-width: 541px;
+} 
+.effects-hyphenation {
+    display: block;
+  }
+}
