--- a/css/styles.css
+++ b/css/styles.css
@@ -1790,3 +1790,96 @@ margin-bottom: 16px;
     display: block;
   }
 }
+
+/* Question */
+
+.question-section {
+  padding: 75px 0;
+}
+
+.question-title {
+  font-weight: 700;
+  font-size: 32px;
+  text-align: center;
+  margin-bottom: 16px;
+}
+
+.section-question-text {
+  font-size: 18px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+
+.question-text {
+  display: block;
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.question-item {
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding-bottom: 22px;
+}
+
+.question-item::after {
+  content: "";
+  display: block;
+  width: 100%;
+  border: 1px solid var(--color-after);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+.question-item:not(:last-child) {
+  margin-bottom: 16px;
+}
+
+.question-item {
+  flex-direction: column;
+  align-items: flex-start;  
+}
+
+.wrap-icon-text {
+  display: flex; 
+  align-items: center;
+  margin-bottom: 14px;
+}
+.icon-question {
+  fill: var(--color-brand);
+  margin-right: 16px;
+}
+
+ @media screen and (min-width: 1150px) {
+  .question-title {
+  font-size: 34px;
+  margin-bottom: 8px;
+}
+
+.section-question-text {
+  margin-bottom: 50px;
+}
+
+.question-item {
+  padding-bottom: 22px;
+}
+
+.question-item {
+  padding-bottom: 24px;
+}
+
+}
+
+/* Pricing */
+
+.promo-section.pricing {
+  padding: 75px 0;
+}
+
+/* Footer */
+
+.section.footer-section {
+  padding-top: 75px;
+}
